Create nosotros, servicios, and update index

--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
         	<span>Siguenos:</span>
         	<!--div class="fb-like" data-href="http://www.hill-realtors.com/" data-layout="button" data-width="90" data-action="like" data-show-faces="false" data-share="false"></div>
         	<a href="https://twitter.com/share" class="twitter-share-button" data-size="large" data-url="http://www.hill-realtors.com/" data-via="gazalem" data-lang="es" data-count="none" data-hashtags="RealStatesPanama">Twittear</a-->
-            <a href="#" class="icon-3"></a>
-            <a href="#" class="icon-2"></a>
-            <a href="#" class="icon-1"></a>
+            <a href="https://webmail.hill-realtors.com/" class="icon-3"></a>
+            <a href="https://www.facebook.com/hillrealtors" class="icon-2"></a>
+            <a href="https://twitter.com/hill_realtors" class="icon-1"></a>
         </div>
         <div id="slide">		
             <div class="slider">
@@ -90,9 +90,9 @@
         <nav style="left: 132px; bottom: 0">
             <ul class="menu">
                 <li class="current"><a href="index.html">INICIO</a></li>
-                <li><a href="#">NOSOTROS</a></li>
-                <li><a href="#">PROPIEDADES</a></li>
-                <li><a href="#">SERVICIOS</a></li>
+                <li><a href="nosotros.html">NOSOTROS</a></li>
+                <li><a href="propiedades.html">PROPIEDADES</a></li>
+                <li><a href="servicios.html">SERVICIOS</a></li>
                 <li><a href="#">PANAMA</a></li>
                 <li><a href="#">CONTACTENOS</a></li>
             </ul>
