SocialIcons, Redaction services.html

--- a/servicios.html
+++ b/servicios.html
@@ -63,7 +63,7 @@
   <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
     <h1 class="display-4">Servicios</h1>
     <p class="lead">
-      Con el fin de brindar una asesoría integral, Hill Realtors posee una variedad de servicios, así ayudamos a nuestros clientes a tener la mejor experiencia en la compra de su propiedad.
+      Con el fin de brindar una asesoría integral, contamos con una variedad de servicios; así ayudamos a nuestros clientes, no sólo a tener la mejor experiencia en la compra de su propiedad, sino también a maximizar su inversión.
     </p>
   </div>
   <div class="container marketing">
@@ -87,7 +87,7 @@
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading">Alquileres y Ventas de Propiedades. <!--span class="text-muted">See for yourself.</span--></h2>
-        <p class="lead">Mantenemos una vasta cartera de propiedades residenciales y comerciales;confeccionamos los contratos de CompraVenta y de Arrendamiento.Lo llevamos de la mano desde el inicio hasta el final del trámite.</p>
+        <p class="lead">Mantenemos una vasta cartera de propiedades residenciales y comerciales; confeccionamos los contratos de Compraventa y de Arrendamiento. Lo llevamos de la mano desde el inicio hasta el final del trámite.</p>
       </div>
       <div class="col-md-5 order-md-1">
         <img src="./images/properties.jpg" alt="Servicios Legales" style="width: 450px; height: 400px;" class="bd-placeholder-img-lg featurette-image img-fluid mx-auto">
@@ -123,7 +123,7 @@
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading">Seguros. <!--span class="text-muted">Checkmate.</span--></h2>
-        <p class="lead">Seguro de Vida / Seguro de Incendio / Seguro de Salud / Seguro de Automóvil.</p>
+        <p class="lead">Hill Realtors cuenta con personal debidamente certificado por la Superintendencia de Seguros y Reaseguros de Panamá, para ofrecerle Seguro de Vida / Seguro de Incendio / Seguro de Salud / Seguro de Automóvil. Trabajamos con las mejores Aseguradoras del país.</p>
       </div>
       <div class="col-md-5">
         <img src="./images/seguros-2.jpg" alt="Servicios Legales" style="width: 450px; height: 400px;" class="bd-placeholder-img-lg featurette-image img-fluid mx-auto">
