--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
         	<span>Siguenos:</span>
         	<!--div class="fb-like" data-href="http://www.hill-realtors.com/" data-layout="button" data-width="90" data-action="like" data-show-faces="false" data-share="false"></div>
         	<a href="https://twitter.com/share" class="twitter-share-button" data-size="large" data-url="http://www.hill-realtors.com/" data-via="gazalem" data-lang="es" data-count="none" data-hashtags="RealStatesPanama">Twittear</a-->
-            <a href="https://webmail.hill-realtors.com/" class="icon-3"></a>
-            <a href="https://www.facebook.com/hillrealtors" class="icon-2"></a>
-            <a href="https://twitter.com/hill_realtors" class="icon-1"></a>
+            <a href="https://www.instagram.com/hillrealtors"><img src="./images/instagram.png" alt="Instagram" width="23" height="23" style="margin-left: 8px;"></a>
+            <a href="https://www.facebook.com/hillrealtors"><img src="./images/facebook.png" alt="facebook" width="23" height="23" style="margin-left: 3px;"></a>
+            <a href="https://twitter.com/hill_realtors"><img src="./images/twitter.png" alt="twitter" width="23" height="23"></a>
         </div>
         <div id="slide">		
             <div class="slider">
