--- a/contactenos.html
+++ b/contactenos.html
@@ -65,33 +65,46 @@
     </nav>
   </div>
   <br>
-  <!-- Carousel -->
+  <!-- Contact Form -->
   <div class="container-xl">
-    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
-      <img src="./images/logo-1.png" alt="Hill Realtors Logo" style="position: absolute; z-index: 10; left: 11%;">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="./images/slider-1.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="./images/slider-2.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="./images/slider-3.jpg" class="d-block w-100" alt="...">
+    <div class="row">
+      <div class="col">
+        <h1 class="text-center">Contactenos</h1>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-6">
+        <div class="row">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15761.546260593756!2d-79.5266101!3d9.028456250000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8faca8301873e65b%3A0x22b10bfa73c7fb8c!2sP.H.%20Green%20Park!5e0!3m2!1ses-419!2spa!4v1605055898181!5m2!1ses-419!2spa" width="562" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </div>
       </div>
-      <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
+      <div class="col-6">
+        <!-- myForm -->
+        <form>
+          <div class="form-group">
+            <label for="inputName">Nombre</label>
+            <input type="text" class="form-control" id="inputName">
+          </div>
+          <div class="form-group">
+            <label for="inputCell">Teléfono Móvil</label>
+            <input type="tel" class="form-control" id="inputCell" aria-describedby="cellHelp">
+            <small class="form-text text-muted" id="cellHelp">No compartimos su número Celular.</small>
+          </div>
+          <div class="form-group">
+            <label for="inputEmail1">Email</label>
+            <input type="email" class="form-control" id="inputEmail1" aria-describedby="emailHelp">
+            <small id="emailHelp" class="form-text text-muted">Nunca compartiremos su correo con nadie.</small>
+          </div>
+          <div class="form-group">
+            <label for="formControlTextarea">Mensaje</label>
+            <textarea class="form-control" id="formControlTextarea" rows="5"></textarea>
+          </div>
+          <button type="submit" class="btn btn-primary">Enviar</button>
+        </form>
+      </div>
     </div>
+    <!-- Contact Form -->
   </div>
-
-  <!-- footer -->
   <br>
   <!-- Footer -->
   <footer class="page-footer font-small blue-grey lighten-5">
