--- a/contactenos.html
+++ b/contactenos.html
@@ -12,11 +12,14 @@
   <!-- Custom Theme -->
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Tangerine&display=swap');
 
     .navbar-theme {
-      font-size: 1.2rem;
-      color: #553C19;
+      /*color: #553C19 !important;*/
+      color: rgba(85,60,25,0.9) !important;
       font-weight: bold;
+      font-size: 1.2rem;
+      text-transform: uppercase;
     }
   </style>
   <script src="https://kit.fontawesome.com/c95f589f9a.js" crossorigin="anonymous"></script>
@@ -25,57 +28,52 @@
 
 <body>
   <!-- Navbar and social media -->
-  <div class="container-xl">
-    <!-- Image and text -->
-    <nav class="navbar">
-      <div class="navbar-brand">
-        <span class="navbar-theme" style="font-family: 'Raleway', sans-serif;">Síguenos:&nbsp;</span>
-        <a href="https://twitter.com/hillrealtors">
-          <img src="./images/twitter.png" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
-        </a>
-        <a href="https://www.facebook.com/hillrealtors">
-          <img src="./images/facebook.png" width="30" height="30" class="d-inline-block align-top" alt=""
-            loading="lazy">
-        </a>
-        <a href="https://www.instagram.com/hillrealtors">
-          <img src="./images/instagram.png" width="30" height="30" class="d-inline-block align-top" alt=""
-            loading="lazy">
-        </a>
-      </div>
-      <ul class="nav justify-content-end">
+  <div class="container-lg sticky-top" style="background-color: white;">
+    <nav class="navbar navbar-expand-lg navbar-light">
+    <a class="navbar-brand" href="#">
+      <img src="./images/logo-1.png" alt="" height="80">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active navbar-theme" href="#">INICIO</a>
+          <a class="nav-link navbar-theme" href="./index.html">Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link navbar-theme" href="nosotros.html">NOSOTROS</a>
+          <a class="nav-link navbar-theme" href="./nosotros.html">Nosotros</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link navbar-theme" href="#">PROPIEDADES</a>
+          <a href="#" class="nav-link navbar-theme">Nuestros Agentes</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link navbar-theme" href="servicios.html">SERVICIOS</a>
+          <a class="nav-link navbar-theme" href="#">Propiedades</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link navbar-theme">PANAMA</a>
+          <a href="./servicios.html" class="nav-link navbar-theme">Servicios</a>
         </li>
-        <li class="nav-item">
-          <a href="contactenos.html" class="nav-link navbar-theme">CONTACTENOS</a>
+        <li class="nav-item active">
+          <a href="#" class="nav-link navbar-theme">Contactenos <span class="sr-only">(current)</span></a>
         </li>
       </ul>
-    </nav>
+    </div>
+  </nav>
   </div>
+  <div class="container-fluid shadow-sm">&nbsp;</div>
   <br>
   <!-- Contact Form -->
   <div class="container-xl">
     <div class="row">
       <div class="col">
-        <h1 class="text-center">Contactenos</h1>
+        <h1 class="text-center" style="text-shadow: 4px 6px 6px #aaa;text-transform:none;font-family: Tangerine;font-size: 5em;">Contáctenos</h1>
       </div>
     </div>
+    <br><br><br>
     <div class="row">
       <div class="col-6">
         <div class="row">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15761.546260593756!2d-79.5266101!3d9.028456250000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8faca8301873e65b%3A0x22b10bfa73c7fb8c!2sP.H.%20Green%20Park!5e0!3m2!1ses-419!2spa!4v1605055898181!5m2!1ses-419!2spa" width="562" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15761.546260593756!2d-79.5266101!3d9.028456250000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8faca8301873e65b%3A0x22b10bfa73c7fb8c!2sP.H.%20Green%20Park!5e0!3m2!1ses-419!2spa!4v1605055898181!5m2!1ses-419!2spa" width="562" height="500" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </div>
       </div>
       <div class="col-6">
@@ -83,7 +81,7 @@
         <form>
           <div class="form-group">
             <label for="inputName">Nombre</label>
-            <input type="text" class="form-control" id="inputName">
+            <input type="text" class="form-control" id="inputName" placeholder="Nombre Apellido">
           </div>
           <div class="form-group">
             <label for="inputCell">Teléfono Móvil</label>
@@ -92,14 +90,14 @@
           </div>
           <div class="form-group">
             <label for="inputEmail1">Email</label>
-            <input type="email" class="form-control" id="inputEmail1" aria-describedby="emailHelp">
+            <input type="email" class="form-control" id="inputEmail1" aria-describedby="emailHelp" placeholder="usuario@sudominio.com">
             <small id="emailHelp" class="form-text text-muted">Nunca compartiremos su correo con nadie.</small>
           </div>
           <div class="form-group">
             <label for="formControlTextarea">Mensaje</label>
             <textarea class="form-control" id="formControlTextarea" rows="5"></textarea>
           </div>
-          <button type="submit" class="btn btn-primary">Enviar</button>
+          <button type="submit" class="btn btn-success">Enviar</button>
         </form>
       </div>
     </div>
@@ -114,22 +112,22 @@
         <div class="row py-4 d-flex align-items-center">
           <!-- Grid column -->
           <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
-            <h6 class="mb-0">Conectate a nuestras redes sociales!</h6>
+            <h5 class="mb-0">Contáctenos en nuestras redes sociales</h5>
           </div>
           <!-- Grid column -->
 
           <!-- Grid column -->
           <div class="col-md-6 col-lg-7 text-center text-md-right">
             <!-- Facebook -->
-            <a class="fb-ic navbar-theme">
+            <a class="fb-ic navbar-theme" style="font-size: 1.6rem;">
               <i class="fab fa-facebook-f white-text mr-4"> </i>
             </a>
             <!-- Twitter -->
-            <a class="tw-ic navbar-theme">
+            <a class="tw-ic navbar-theme" style="font-size: 1.6rem;">
               <i class="fab fa-twitter white-text mr-4"> </i>
             </a>
             <!--Instagram-->
-            <a class="ins-ic navbar-theme">
+            <a class="ins-ic navbar-theme" style="font-size: 1.6rem;">
               <i class="fab fa-instagram white-text"> </i>
             </a>
           </div>
@@ -151,9 +149,7 @@
           <!-- Content -->
           <h6 class="text-uppercase font-weight-bold">Hill Realtors</h6>
           <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-          <p>Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit amet,
-            consectetur
-            adipisicing elit.</p>
+          <p>Nos especializamos en la consultoría, administración, alquiler y venta de proyectos y propiedades inmobiliarias en Panamá. Adicionalmente y con el fin de brindar una asesoría integral, contamos con una variedad de servicios, tales como, Servicios Legales, Servicios Bancarios y Financieros y Seguros.</p>
 
         </div>
         <!-- Grid column -->
@@ -162,19 +158,22 @@
         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
 
           <!-- Links -->
-          <h6 class="text-uppercase font-weight-bold">Products</h6>
+          <h6 class="text-uppercase font-weight-bold">Mapa del Sitio</h6>
           <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
           <p>
-            <a class="dark-grey-text" href="#!">MDBootstrap</a>
+            <a class="dark-grey-text" href="#!">Nosotros</a>
           </p>
           <p>
-            <a class="dark-grey-text" href="#!">MDWordPress</a>
+            <a class="dark-grey-text" href="#!">Nuestros Agentes</a>
           </p>
           <p>
-            <a class="dark-grey-text" href="#!">BrandFlow</a>
+            <a class="dark-grey-text" href="#!">Propiedades</a>
           </p>
           <p>
-            <a class="dark-grey-text" href="#!">Bootstrap Angular</a>
+            <a class="dark-grey-text" href="#!">Servicios</a>
+          </p>
+          <p>
+            <a href="#" class="dark-grey-text">Contactenos</a>
           </p>
 
         </div>
@@ -183,13 +182,12 @@
         <!-- Grid column -->
         <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
 
-          <!-- Links -->
           <h6 class="text-uppercase font-weight-bold">Enlaces Útiles</h6>
           <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
           <p>
             <a class="dark-grey-text" href="https://webmail.hill-realtors.com/">WebMail</a>
           </p>
-          <!-- <p>
+          <p>
             <a class="dark-grey-text" href="#!">Become an Affiliate</a>
           </p>
           <p>
@@ -197,7 +195,7 @@
           </p>
           <p>
             <a class="dark-grey-text" href="#!">Ayuda</a>
-          </p> -->
+          </p>
 
         </div>
         <!-- Grid column -->
@@ -215,7 +213,7 @@
           <p>
             <i class="fas fa-phone mr-3"></i> + 507 830 7578</p>
           <p>
-            <i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
+            <i class="fas fa-mobile-alt mr-3"></i> + 507 6678 7616</p>
 
         </div>
         <!-- Grid column -->
