--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
 
     .navbar-theme {
-      font-size: 1.2rem;
+      font-size: 1.1rem;
       color: #553C19;
       font-weight: bold;
     }
@@ -50,13 +50,13 @@
           <a class="nav-link navbar-theme" href="nosotros.html">NOSOTROS</a>
         </li>
         <li class="nav-item">
+          <a href="#" class="nav-link navbar-theme">NUESTROS AGENTES</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link navbar-theme" href="#">PROPIEDADES</a>
         </li>
         <li class="nav-item">
           <a class="nav-link navbar-theme" href="servicios.html">SERVICIOS</a>
-        </li>
-        <li class="nav-item">
-          <a href="#" class="nav-link navbar-theme">PANAMA</a>
         </li>
         <li class="nav-item">
           <a href="contactenos.html" class="nav-link navbar-theme">CONTACTENOS</a>
@@ -91,8 +91,7 @@
     </div>
   </div>
 
-  <!-- footer -->
-  <br>
+  <br><br><br>
   <!-- Footer -->
   <footer class="page-footer font-small blue-grey lighten-5">
     <div style="background-color: #51a131;">
@@ -101,22 +100,22 @@
         <div class="row py-4 d-flex align-items-center">
           <!-- Grid column -->
           <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
-            <h6 class="mb-0">Conectate a nuestras redes sociales!</h6>
+            <h5 class="mb-0">Contáctenos en nuestras redes sociales</h5>
           </div>
           <!-- Grid column -->
 
           <!-- Grid column -->
           <div class="col-md-6 col-lg-7 text-center text-md-right">
             <!-- Facebook -->
-            <a class="fb-ic navbar-theme">
+            <a class="fb-ic navbar-theme" style="font-size: 1.6rem;" href="https://www.facebook.com/hillrealtors">
               <i class="fab fa-facebook-f white-text mr-4"> </i>
             </a>
             <!-- Twitter -->
-            <a class="tw-ic navbar-theme">
+            <a class="tw-ic navbar-theme" style="font-size: 1.6rem;" href="https://twitter.com/hillrealtors">
               <i class="fab fa-twitter white-text mr-4"> </i>
             </a>
             <!--Instagram-->
-            <a class="ins-ic navbar-theme">
+            <a class="ins-ic navbar-theme" style="font-size: 1.6rem;" href="https://www.instagram.com/hillrealtors">
               <i class="fab fa-instagram white-text"> </i>
             </a>
           </div>
@@ -138,59 +137,45 @@
           <!-- Content -->
           <h6 class="text-uppercase font-weight-bold">Hill Realtors</h6>
           <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-          <p>Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit amet,
-            consectetur
-            adipisicing elit.</p>
+          <p>Nos especializamos en la consultoría, administración, alquiler y venta de proyectos y propiedades inmobiliarias en Panamá. Adicionalmente y con el fin de brindar una asesoría integral, contamos con una variedad de servicios, tales como, Servicios Legales, Seguros, Servicios Bancarios y Financieros.</p>
 
         </div>
         <!-- Grid column -->
 
         <!-- Grid column -->
-        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+        <div class="col-md-5 col-lg-5 col-xl-5mb-4">
 
           <!-- Links -->
-          <h6 class="text-uppercase font-weight-bold">Products</h6>
-          <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-          <p>
-            <a class="dark-grey-text" href="#!">MDBootstrap</a>
-          </p>
-          <p>
-            <a class="dark-grey-text" href="#!">MDWordPress</a>
-          </p>
-          <p>
-            <a class="dark-grey-text" href="#!">BrandFlow</a>
-          </p>
-          <p>
-            <a class="dark-grey-text" href="#!">Bootstrap Angular</a>
-          </p>
+          <div class="row">
+            <div class="offset-4 col-md-4 col-lg-4 col-xl-4 d-block justify-content-center">
+              <!-- align here -->
+              <h6 class="text-uppercase font-weight-bold">Mapa del Sitio</h6>
+              <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+              <p>
+                <a class="dark-grey-text" href="nosotros.html">Nosotros</a>
+              </p>
+              <p>
+                <a class="dark-grey-text" href="#!">Nuestros Agentes</a>
+              </p>
+              <p>
+                <a class="dark-grey-text" href="#!">Propiedades</a>
+              </p>
+              <p>
+                <a class="dark-grey-text" href="servicios.html">Servicios</a>
+              </p>
+              <p>
+                <a href="contactenos.html" class="dark-grey-text">Contactenos</a>
+              </p>
+            </div>
+            <!-- <div class="col-md-4 col-lg-4 col-xl-4 d-block justify-content-center">&nbsp;</div> -->
+          </div>
 
         </div>
         <!-- Grid column -->
 
-        <!-- Grid column -->
-        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-
-          <!-- Links -->
-          <h6 class="text-uppercase font-weight-bold">Enlaces Útiles</h6>
-          <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-          <p>
-            <a class="dark-grey-text" href="https://webmail.hill-realtors.com/">WebMail</a>
-          </p>
-          <!-- <p>
-            <a class="dark-grey-text" href="#!">Become an Affiliate</a>
-          </p>
-          <p>
-            <a class="dark-grey-text" href="#!">Shipping Rates</a>
-          </p>
-          <p>
-            <a class="dark-grey-text" href="#!">Ayuda</a>
-          </p> -->
-
-        </div>
-        <!-- Grid column -->
 
         <!-- Grid column -->
-        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+        <div class="col-md-4 col-lg-4 col-xl-4 mx-auto mb-md-0 mb-4">
 
           <!-- Links -->
           <h6 class="text-uppercase font-weight-bold">Contacto</h6>
@@ -202,7 +187,7 @@
           <p>
             <i class="fas fa-phone mr-3"></i> + 507 830 7578</p>
           <p>
-            <i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
+            <i class="fas fa-mobile-alt mr-3"></i> + 507 6678 7616</p>
 
         </div>
         <!-- Grid column -->
