--- a/nosotros.html
+++ b/nosotros.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <!-- Required meta tags -->
@@ -9,69 +9,78 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
-  <!-- <link rel="stylesheet" href="./css/cover.css"> -->
-  <link rel="stylesheet" href="./css/main.css">
-  <!-- customs styles -->
+  <!-- Custom Theme -->
   <style>
-    html,body {
-      padding-top: 0rem;
+    @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+
+    .navbar-theme {
+      /*color: #553C19 !important;*/
+      color: rgba(85,60,25,0.9) !important;
+      font-weight: bold;
+      font-size: 1.2rem;
+      text-transform: uppercase;
+    }
+    .titulosh1 {
+      text-shadow: 4px 6px 6px #aaa;
+      text-transform:none;
+      font-weight: 300;
+      font-size: 3.5rem;
+      color: rgba(85,60,25,0.9);
     }
   </style>
-  <title>Hill Realtors - Nosotros</title>
+  <script src="https://kit.fontawesome.com/c95f589f9a.js" crossorigin="anonymous"></script>
+  <title>Hill Realtors | Contáctenos</title>
 </head>
 
 <body>
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg border-bottom shadow-sm">
-    <div class="navbar-collapse collapse w-100 dual-collapse2 order-1 order-md-0">
-      <ul class="navbar-nav ml-auto text-center">
+  <!-- Navbar and social media -->
+  <div class="container-lg sticky-top" style="background-color: white;">
+    <nav class="navbar navbar-expand-lg navbar-light">
+    <a class="navbar-brand" href="#">
+      <img src="./images/logo-1.png" alt="" height="80">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="index.html">Inicio</a>
+          <a class="nav-link navbar-theme" href="./index.html">Inicio</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link navbar-theme" href="./nosotros.html">Nosotros <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="nosotros.html">Nosotros</a>
+          <a href="#" class="nav-link navbar-theme">Nuestros Agentes</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Propiedades</a>
-        </li>
-      </ul>
-    </div>
-    <div class="mx-auto my-2 order-0 order-md-1 position-relative">
-      <a class="mx-auto" href="./index.html">
-        <img src="./images/small_logo.png">
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-    </div>
-    <div class="navbar-collapse collapse w-100 dual-collapse2 order-2 order-md-2">
-      <ul class="navbar-nav mr-auto text-center">
-        <li class="nav-item">
-          <a class="nav-link active" href="servicios.html">Servicios</a>
+          <a class="nav-link navbar-theme" href="#">Propiedades</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Panama</a>
+          <a href="./servicios.html" class="nav-link navbar-theme">Servicios</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contactenos</a>
+          <a href="./contactenos.html" class="nav-link navbar-theme">Contactenos</a>
         </li>
       </ul>
     </div>
   </nav>
+  </div>
+  <div class="container-fluid shadow-sm">&nbsp;</div>
+  <br>
   <!-- end navbar -->
   <div class="container" style="padding-top: 3rem;">
     <!-- align here -->
     <main role="main" class="inner cover">
-      <h1 class="cover-heading text-center">¿Quiénes Somos?</h1>
-      <p class="lead text-justify">Hill Realtors es una empresa de bienes raíces establecida en Panamá, especializada en la consultoría, alquiler y venta de proyectos y propiedades inmobiliarias, con cinco años de experiencia en el mercado.</p>
+      <h1 class="titulosh1 text-center mb-5">¿Quiénes Somos?</h1>
+      <p class="lead text-justify">Hill Realtors es una empresa de bienes raíces establecida en Panamá, especializada en la consultoría, administración, alquiler y venta de proyectos y propiedades inmobiliarias, con seis años de experiencia en el mercado.</p>
       <p class="lead text-justify">Contamos con un grupo de profesionales con experiencia y excelente dominio de su área de trabajo, que lo ayudará en el proceso de vender, comprar, alquilar o invertir. También contamos con alianzas con las empresas de bienes raíces más reconocidas de Panamá, que nos permite identificar la mejor opción para nuestros clientes, de acuerdo a sus posibilidades y necesidades.</p>
       <h3>Misión</h3>
       <p class="lead text-justify">Brindar a nuestros clientes una asesoría de forma responsable, a través de nuestros profesionales altamente capacitados, a fin de que obtengan la máxima rentabilidad sobre su inversión, superando sus expectativas.</p>
       <h3>Visión</h3>
       <p class="lead text-justify">Ser la mejor opción para satisfacer las necesidades de nuestros clientes en el sector inmobiliario panameño, con la máxima seguridad y calidad.</p>
+      <h3>Valores</h3>
       <ul>
-        <li>Valores</li>
         <li>Etica</li>
         <li>Responsabilidad</li>
         <li>Integridad</li>
@@ -84,19 +93,133 @@
   
   </div>
 
+  <br><br><br>
+  <!-- Footer -->
+  <footer class="page-footer font-small blue-grey lighten-5">
+    <div style="background-color: #51a131;">
+      <div class="container">
+        <!-- Grid row-->
+        <div class="row py-4 d-flex align-items-center">
+          <!-- Grid column -->
+          <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
+            <h5 class="mb-0">Contáctenos en nuestras redes sociales</h5>
+          </div>
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <div class="col-md-6 col-lg-7 text-center text-md-right">
+            <!-- Facebook -->
+            <a class="fb-ic navbar-theme" style="font-size: 1.6rem;" href="https://www.facebook.com/hillrealtors">
+              <i class="fab fa-facebook-f white-text mr-4"> </i>
+            </a>
+            <!-- Twitter -->
+            <a class="tw-ic navbar-theme" style="font-size: 1.6rem;" href="https://twitter.com/hillrealtors">
+              <i class="fab fa-twitter white-text mr-4"> </i>
+            </a>
+            <!--Instagram-->
+            <a class="ins-ic navbar-theme" style="font-size: 1.6rem;" href="https://www.instagram.com/hillrealtors">
+              <i class="fab fa-instagram white-text"> </i>
+            </a>
+          </div>
+          <!-- Grid column -->
+
+        </div>
+        <!-- Grid row-->
+
+      </div>
+    </div>
+
+    <!-- Footer Links -->
+    <div class="container text-center text-md-left mt-5">
+      <!-- Grid row -->
+      <div class="row mt-3 dark-grey-text">
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-4 col-xl-3 mb-4">
+
+          <!-- Content -->
+          <h6 class="text-uppercase font-weight-bold">Hill Realtors</h6>
+          <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+          <p>Nos especializamos en la consultoría, administración, alquiler y venta de proyectos y propiedades inmobiliarias en Panamá. Adicionalmente y con el fin de brindar una asesoría integral, contamos con una variedad de servicios, tales como, Servicios Legales, Seguros, Servicios Bancarios y Financieros.</p>
+
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-5 col-lg-5 col-xl-5mb-4">
+
+          <!-- Links -->
+          <div class="row">
+            <div class="offset-4 col-md-4 col-lg-4 col-xl-4 d-block justify-content-center">
+              <!-- align here -->
+              <h6 class="text-uppercase font-weight-bold">Mapa del Sitio</h6>
+              <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+              <p>
+                <a class="dark-grey-text" href="nosotros.html">Nosotros</a>
+              </p>
+              <p>
+                <a class="dark-grey-text" href="#!">Nuestros Agentes</a>
+              </p>
+              <p>
+                <a class="dark-grey-text" href="#!">Propiedades</a>
+              </p>
+              <p>
+                <a class="dark-grey-text" href="servicios.html">Servicios</a>
+              </p>
+              <p>
+                <a href="contactenos.html" class="dark-grey-text">Contactenos</a>
+              </p>
+            </div>
+            <!-- <div class="col-md-4 col-lg-4 col-xl-4 d-block justify-content-center">&nbsp;</div> -->
+          </div>
+
+        </div>
+        <!-- Grid column -->
 
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-      crossorigin="anonymous"></script>
+        <!-- Grid column -->
+        <div class="col-md-4 col-lg-4 col-xl-4 mx-auto mb-md-0 mb-4">
+
+          <!-- Links -->
+          <h6 class="text-uppercase font-weight-bold">Contacto</h6>
+          <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+          <p>
+            <i class="fas fa-home mr-3"></i> Condado del Rey, Panamá</p>
+          <p>
+            <i class="fas fa-envelope mr-3"></i> info@hill-realtors.com</p>
+          <p>
+            <i class="fas fa-phone mr-3"></i> + 507 830 7578</p>
+          <p>
+            <i class="fas fa-mobile-alt mr-3"></i> + 507 6678 7616</p>
+
+        </div>
+        <!-- Grid column -->
+
+      </div>
+      <!-- Grid row -->
+
+    </div>
+    <!-- Footer Links -->
+
+    <!-- Copyright -->
+    <div class="footer-copyright text-center text-black-50 py-3">© 2020 Copyright:
+      <a class="dark-grey-text" href="https://www.hill-realtors.com/"> hill-realtors.com</a>
+    </div>
+    <!-- Copyright -->
+
+  </footer>
+  <!-- Footer -->
+
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
